[package]
name = "display-info"
version = "0.4.8"
edition = "2021"
description = "Cross-platform get display info"
license-file = "LICENSE"
documentation = "https://docs.rs/display-info"
homepage = "https://github.com/nashaofu/display-info"
repository = "https://github.com/nashaofu/display-info.git"
keywords = ["display", "screen", "displayinfo", "display-info"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
fxhash = "0.2"
widestring = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.3", features = ["randr"] }
