[package]
name = "display-info"
version = "0.5.7"
edition = "2024"
description = "Cross-platform get display info"
license-file = "LICENSE"
documentation = "https://docs.rs/display-info"
homepage = "https://github.com/nashaofu/display-info"
repository = "https://github.com/nashaofu/display-info.git"
keywords = ["display", "screen", "displayinfo", "display-info"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
scopeguard = "1.2"
thiserror = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
# On macos use feature relax-sign-encoding to avoid runtime crash (https://github.com/rust-windowing/winit/pull/4302)
objc2 = { version = "0.6.2", features = ["relax-sign-encoding"] }
objc2-app-kit = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
objc2-foundation = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
fxhash = "0.2"
widestring = "1.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
xcb = { version = "1.6", features = ["randr"] }
smithay-client-toolkit = { version = "0.20", default-features = false }
